# suma_resta

./: README.md  pyproject.toml  rxconfig.py
public/: index.html  sitemap-0.xml
public/404/: index.html
public/_next/static/PqGkBsShJ0PW_4eyGBnv5/: _buildManifest.js
public/_next/static/chunks/: 264-798d20e5a4dca8d6.js  899-442c9b8f738e9c45.js
public/_next/static/chunks/pages/: 404-cdf3f09738470016.js  _app-6200fe4fa290b2c6.js  index-f2e30758da369590.js  play-9b4e0726f5df70b5.js
public/_next/static/css/: 37bfbb43e3ded2d4.css
public/play/: index.html
suma_resta/: play.py  suma_resta.py
